// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should match the snapshot test 1`] = `
<div
  className="card"
  onClick={[Function]}
>
  <h5 />
  <p
    className={null}
  />
</div>
`;

exports[`Card tests should render as a form card when passed formInfo 1`] = `
<div
  className="form-card"
  onClick={[Function]}
>
  <h5>
    Hotwork Permit - Alan Parson
  </h5>
  <p
    className={null}
  />
  <div
    className="form-card"
  >
    <p>
      Employee Email: 
      alanparsons@project.com
    </p>
    <p>
      Project ID: 
      12
    </p>
    <p>
      Company: 
      The APP Inc
    </p>
    <p>
      Date: 
      2018-01-08
    </p>
    <p>
      Firewatch Requirement: 
      1 hour
    </p>
    <p>
      Area Inspected: 
      Yes
    </p>
    <p>
      Fire Extinguisher: 
      Yes
    </p>
    <p>
      Flammables Removed: 
      Yes
    </p>
    <p>
      Sprinkler Heads Protected: 
      Yes
    </p>
    <img
      alt="Hotwork Permit - Alan Parson Signature"
      src="xxx"
    />
  </div>
</div>
`;

exports[`Card tests should render as a project card when passed projectInfo 1`] = `
<div
  className="card"
  onClick={[Function]}
>
  <h5>
    The Alan Parsons Project
  </h5>
  <p
    className={null}
  >
    Sirius
  </p>
  <div>
    <p>
      Public: 
      Yes
    </p>
    <p>
      Union: 
      Yes
    </p>
  </div>
</div>
`;

exports[`Card tests should render as an employee card when passed employeeInfo 1`] = `
<div
  className="card"
  onClick={[Function]}
>
  <h5>
    Alan Parson
  </h5>
  <p
    className={null}
  >
    Musician
  </p>
  <div>
    <p>
      555-555-5556
    </p>
    <p>
      alanparsons@project.com
    </p>
  </div>
</div>
`;
